--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                                 <div class="footer removeborder">
                                 <p style="text-indent:2em ">DFSC have invited a group of professors and researchers in information science to join DFSC, and has been built a series of cooperation with Universities and Enterprises. <br/>					
             			</div>
-                            <div class="footer1">				  
+                            <div class="footer1 removeborder">				  
 				    <p style="text-indent:2em ">In order to promoting mutual discussion in academic research and industrial applications, DFSC organizes and participates in the organization of a series of <a href="Conference.html">conferences</a> in information science. At the same time, DFSC also provides online training <a href="courses.html">courses</a> to cultivate talents in information science.</p>
 		    </div>
-		<div class="footer3">
+		<div class="footer3 removeborder">
 			<p><a href="contact.html">contact</a></p>
 				</div>
 		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;margin: 10px;"></a> <br/>
