--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -44,7 +44,7 @@
 	</style>
 
 </head>
-<body background="http://www.xiaohongshu.com/discovery/item/58b268a3d5945f267a30edd4">
+<body background="image/图片16.jpg">
     <div >
         <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
