--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -44,7 +44,7 @@
 	</style>
 
 </head>
-<body>
+<body background="image/图片16.jpg">
     <div >
         <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
