--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 			display:block;
 			display: -ms-flexbox;
 		}
+	 .section1{
+		 margin-top: 15px;
+		}
 	 .section {
 		 background-color:skyblue;
 	         color:black;
@@ -132,7 +135,9 @@
             <div id = "introdution">
                         <div class="introdution">
                             <div id="theme">
+				    <div class="section1">
             		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+				</div>
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
                                 <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>            
