--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,10 @@
 									<textarea rows="8" cols="60"></textarea>
 								</td>
 							</tr>
+							<tr>
+                            	                                <td></td>
+                            	                                <td><input type="submit" value="SUBMIT" ></td>
+                                                        </tr>
 
 		</form> 
 	</body>
