--- a/Conference.html
+++ b/Conference.html
@@ -33,6 +33,9 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
+	.section{
+		margin-top: 10px;
+		}
 	.section1 {
 	        background-color:aliceblue;	     
 	        color:black;
@@ -140,7 +143,9 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
+		<div class="section">
 		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+		    </div>
                     <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
 		      <div class="section1 removeborder">
