--- a/Conference.html
+++ b/Conference.html
@@ -35,6 +35,7 @@
 		}
 	.section{
 		margin-top: 10px;
+		text-align:center;
 		}
 	.section1 {
 	        background-color:aliceblue;	     
@@ -144,7 +145,7 @@
             <div class="introdution">
                 <div id="theme">
 		<div class="section">
-		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:60%;" height:300px;></a> <br/>
 		    </div>
                     <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
