--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 								</td>
 							</tr>
 							<tr>                            	                                
-                            	                                <td><input type="submit" value="SUBMIT" ></td>
+                            	                                <td><input type="submit" value="Submit" ></td>
                                                         </tr>
 
 		</form> 
