--- a/Conference.html
+++ b/Conference.html
@@ -36,6 +36,7 @@
 	.section{
 		margin-top: 10px;
 		text-align:center;
+		margin-bottom:30px;
 		}
 	.section1 {
 	        background-color:aliceblue;	     
