--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<form action="">
+		<form action="https://formspree.io/f/xyylnwvp" method="POST">
 			<titel><strong><font size="10" >CONTACT US</font></strong></titel><br>
 			<table border="0">
 				<tr>
