--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 							</tr>
 							<tr>
 								<td colspan="2" style="width:600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from MPC Alliance.
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from Digital Future Research Center.
 								</td>
 							</tr>
 							<tr>
@@ -65,7 +65,7 @@
 							</tr>
 							<tr>
 								<td colspan="2" style="width: 600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow MPC Alliance to store and process my personal data.
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow Digital Future Research Center to store and process my personal data.
 								</td>
 							</tr>
 							<tr>
