--- a/Contact us.html
+++ b/Contact us.html
@@ -60,7 +60,7 @@
 							</tr>
 							<tr>
 								<td colspan="2" style="width:600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from MPC Alliance.
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from Digital Future Research Center.
 								</td>
 							</tr>
 							<tr>
@@ -70,7 +70,7 @@
 							</tr>
 							<tr>
 								<td colspan="2" style="width: 600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow MPC Alliance to store and process my personal data.
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow Digital Future Research Center to store and process my personal data.
 								</td>
 							</tr>
 							<tr>
