--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
 							</tr>                           
 							<tr>
 								<td colspan="2" style="width: 600px;">					
-									Digital Future Research Center is committed to protecting and respecting your privacy, and we’ll only use your personal information to administer your account and to provide the products and services you requested from us. From time to time, we would like to contact you about our products and services, as well as other content that may be of interest to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:
+									DFSC Center is committed to protecting and respecting your privacy, and we’ll only use your personal information to administer your account and to provide the products and services you requested from us. From time to time, we would like to contact you about our products and services, as well as other content that may be of interest to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:
 								</td>
 							</tr>
 							<tr>
 								<td colspan="2" style="width:600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from Digital Future Research Center.
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from DFSC Center.
 								</td>
 							</tr>
 							<tr>
@@ -65,7 +65,7 @@
 							</tr>
 							<tr>
 								<td colspan="2" style="width: 600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow Digital Future Research Center to store and process my personal data.
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow DFSC Center to store and process my personal data.
 								</td>
 							</tr>
 							<tr>
