--- a/contact1.html
+++ b/contact1.html
@@ -1,1 +1,81 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+	</head>
+	<body>
+		<h1 align="center"><strong><font size="10">CONTACT US</font></strong></h1><br>
+		<form  action="https://formspree.io/f/xyylnwvp" method="POST">
+			<table border="0" style="margin:0 auto;">				
+				<tr>
+					<td>名:</td>
+					<td>姓:</td>
+				</tr>
+				<tr>
+					<td><input type="text" name="名" style="width: 160px;height: 20px;"></td>
+					<td><input type="text" name="姓" style="width: 405px;height: 20px;"></td>
+				</tr>
+				<tr>
+								<td>邮箱</td>
+							</tr>
+							<tr>
+								<td colspan=2 >
+									<input type="text" name="Company Email" style="width: 600px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>单位名称</td>
+							</tr>
+							<tr>
+								<td colspan="2">
+									<input type="text" name="Company name" style="width: 600px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>联系我们的原因</td>
+							</tr>
+							<tr>
+								<td colspan="2">
+									<input type="text" name="Reason for contacting us" style="width: 600px;height: 20px;">
+								</td>
+							</tr>						
+							<tr>
+								<td>信息</td>
+							</tr>
+							<tr >
+								<td colspan="2" >
+									<textarea rows="8" cols="88"></textarea>
+								</td>
+							</tr>                           
+							<tr>
+								<td colspan="2" style="width: 600px;">					
+									DFSC中心致力于保护和尊重您的隐私，我们只会使用您的个人信息管理您的账户，并提供您要求我们提供的产品和服务。我们希望随时与您联系我们的产品和服务，以及您可能感兴趣的其他内容。如果您同意我们为此目的与您联系，请在下面打勾，说明您希望我们如何与您联系:
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2" style="width:600px;">
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">本人同意接收DFSC中心的其他通讯。
+								</td>
+							</tr>
+							<tr>
+							<td colspan="2" style="width: 600px;">
+                为了向您提供所要求的内容，我们需要存储和处理您的个人数据。如果您同意我们为此目的储存您的个人资料，请在下面的复选框内打勾。
+                </td>
+							</tr>
+							<tr>
+								<td colspan="2" style="width: 600px;">
+									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">本人同意DFSC中心存储和处理我的个人资料。
+                </td>
+							</tr>
+							<tr>
+							<td colspan="2" style="width: 600px;">
+                你可以在任何时候取消订阅这些通讯。欲了解更多关于如何取消订阅、我们的隐私做法以及我们如何致力于保护和尊重您的隐私的信息，请参阅我们的隐私政策。
+                </td>
+							</tr>
+							<tr>
+								<td><input type="submit" value="Submit" ></td>
+							</tr>
+		</form> 
+	</body>
+<html>
