--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				    <p style="text-indent:2em ">In order to promoting mutual discussion in academic research and industrial applications, DFSC organizes and participates in the organization of a series of <a href="Conference.html">conferences</a> in information science. At the same time, DFSC also provides online training <a href="courses.html">courses</a> to cultivate talents in information science.</p>
 		    </div>
 		<div class="footer3 removeborder">
-			<p><a href="contact.html">Contact us</a></p>
+			<p><a href="contact.html">Contact us</a> <a href="contact1.html">Contact us(ch)</a></p>
 				</div>
 		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:30%;margin: 10px;"></a> <br/>
 		    <script type="text/javascript">
