--- a/contact1.html
+++ b/contact1.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<h1 align="center"><strong><font size="10">CONTACT US</font></strong></h1><br>
+		<h1 align="center"><strong><font size="10">联系我们</font></strong></h1><br>
 		<form  action="https://formspree.io/f/xyylnwvp" method="POST">
 			<table border="0" style="margin:0 auto;">				
 				<tr>
