--- a/contact1.html
+++ b/contact1.html
@@ -74,7 +74,7 @@
                 </td>
 							</tr>
 							<tr>
-								<td><input type="submit" value="Submit" ></td>
+								<td><input type="submit" value="提交" ></td>
 							</tr>
 		</form> 
 	</body>
