--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 	.footer3{
 		margin-top: 15px;	
 		}
+	.footer4{
+		text-align:center;
+		margin-top: 15px;
+		}
 	.induc{
 		color:  skyblue;
 	} 
@@ -153,7 +157,10 @@
 		    </div>
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a> <a href="contact1.html">Contact us(ch)</a></p>
-				</div>
+		</div>
+		<div class="footer4 removeborder">
+			<p style="text-align:center"> <img  src="image/版权/jpg " style="width:50%; height:50%;" height:200px;></a> <br/>
+		</div>
 		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:20%;margin: 10px;"></a> <br/>
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
