--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<p><a href="contact.html">Contact us</a> <a href="contact1.html">Contact us(ch)</a></p>
 		</div>
 		<div class="footer4 removeborder">
-			<p style="text-align:center"> <img  src="image/版权/jpg " style="width:50%; height:50%;" height:200px;></a> <br/>
+			<p style="text-align:center"> <img  src="image/版权.jpg" style="width:50%; height:50%;" height:200px;></a> <br/>
 		</div>
 		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:20%;margin: 10px;"></a> <br/>
 		    <script type="text/javascript">
