--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		</div>
 		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:20%;margin: 10px;"></a> <br/>
 		 <div class="footer4 removeborder">
-			<p style="text-align:center"> <img  src="image/版权.jpg" style="width:50%; height:50%;" height:200px;></a> <br/>
+			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>
 		</div>  
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
