--- a/index.html
+++ b/index.html
@@ -158,10 +158,7 @@
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a> <a href="contact1.html">Contact us(ch)</a></p>
 		</div>
-		<tr>
-			<td><img src=image/图层%201(1).png border=0></td>
-			<td><img src=image/FTG logo.jpg border=0></td>
-		</tr>		
+		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:20%;margin: 10px;"></a> <br/>		
 		 <div class="footer4 removeborder">
 			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>
 		</div>  
