--- a/News.html
+++ b/News.html
@@ -139,32 +139,10 @@
             <div class="introdution">
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">News</p>
-<!--                      <hr> -->
-		     <!-- <div class="section1 removeborder">
-                    <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
-		    <!-- </div> -->
-			<!-- <hr> -->
-		    <div class="section2 removeborder">
-                    <p style="text-align: center;font-size: 20px"><!-- The --> </p>
-                    <p style="text-indent:2em ">*Fully <br/>
-                    <p style="text-indent:2em ">*Lattice-based <br/>
-                    <p style="text-indent:2em ">*Secure <br/>
-                    <p style="text-indent:2em ">*AI and Security <br/>
-		    </div>
-			    <hr>
-		    <div class="footer1 removeborder">
-                    <p style="text-align: center;font-size: 20px"><!-- The --></p> 
-                    <p style="text-indent:2em ">*Differential Privacy <br/> 
-                    <p style="text-indent:2em ">*Secure Computation <br/>
-                    <p style="text-indent:2em ">*Blockchains and Applications <br/>
-                    <p style="text-indent:2em ">*Advanced Topics in Cryptography <br/>
-                    <p style="text-indent:2em ">*Trusted Computing<br/> 
-		    </div>
-		    <!-- <hr> -->
-		    <div class="footer2 removeborder">
-		                    <p style="text-indent:2em ">Online  <br/> 
-		    		    </div>
-		            </div>
+                     <tr>
+			<td>Industrial News</td>
+			<td>Research News</td>
+		    </tr>	
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
 		    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
