--- a/News.html
+++ b/News.html
@@ -33,57 +33,22 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	.section1 {
-	        background-color:snow;
-	        color:black;
-	        clear:both;
-	        text-align:center;
-	        padding:5px; 
-		border-style: groove;		
-		border-radius: 20px;
-		text-align: justify;
-/* 		border-color: skyblue; */
-/* 		margin-top: 30px; */
-	}
-	.section2 {
-	        background-color:snow;
-	        color:black;
-	        clear:both;
-	        text-align:center;
-	        padding:5px; 
-		border-style: groove;		
-		border-radius: 20px;
-		margin-top: 10px;
-		text-align: justify;
-/* 		border-color: skyblue; */
-	}
-	.footer1 {
-	        background-color:snow;
-	        color:black;
-	        clear:both;
-	        text-align:center;
-	        padding:5px; 
-		border-style: groove;		
-		border-radius: 20px;
-		margin-top: 10px;
-		text-align: justify;
-/* 		border-color: skyblue; */
-	}
-	.footer2 {
-	        background-color:snow;
-	        color:black;
-	        clear:both;
-	        text-align:center;
-	        padding:5px; 
-		border-style: groove;		
-		border-radius: 20px;
-		margin-top: 10px;
-/* 		border-color: skyblue; */
-		texte-align: justify;
-	}
-	.removeborder{ 
-		border: none
-		}
+	*{
+          padding:0;
+          margin:0;
+          border:none;
+         }
+        #news{
+              width:300px;
+              height:100px;
+              margin:20px auto;
+              background-color:#CCC;
+              border:#039 solid 1px;
+              overflow:hidden;/*这里必须设置哦，否则滚动会消失的，如果设置为scroll，更容易明白原理*/
+         }
+       #news li{
+              line-height:30px;
+        }
 	</style>
 </head>
     
@@ -140,8 +105,47 @@
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">News</p>
                      <tr>
-			<td>Industrial News</td>
-			<td>Research News</td>
+			<td>
+				Industrial News
+				<div id="news" onmouseover="tz()" onmouseout="ks()">
+<ul id="p1">
+<li><a href="">1这是测试新闻滚动效果</a></li>
+<li><a href="">2这是测试新闻滚动效果</a></li>
+<li><a href="">3这是测试新闻滚动效果</a></li>
+<li><a href="">4这是测试新闻滚动效果</a></li>
+<li><a href="">5这是测试新闻滚动效果</a></li>
+<li><a href="">6这是测试新闻滚动效果</a></li>
+<li><a href="">7这是测试新闻滚动效果</a></li>
+<li><a href="">8这是测试新闻滚动效果</a></li>
+</ul>
+<ul id="p2">
+</ul>
+</div>
+<script type="text/javascript">
+var n=document.getElementById("news");
+var p1=document.getElementById("p1");
+var p2=document.getElementById("p2");
+p2.innerHTML=p1.innerHTML;
+//alert(n.offsetHeight+" 1  "+p1.offsetHeight);
+var f=function(){
+    n.scrollTop++;
+    if(n.scrollTop>=p1.offsetHeight){
+        //alert(n.scrollTop+" 1  "+p1.offsetHeight);
+        n.scrollTop=0;
+    }
+}
+var i=setInterval(f,20);
+var tz=function(){
+    clearInterval(i);
+}
+var ks=function(){
+    i=setInterval(f,20);
+}
+</script>
+			 </td>
+			<td>
+				Research News
+			</td>
 		    </tr>	
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
