--- a/News.html
+++ b/News.html
@@ -119,80 +119,80 @@
 			<td>
 				Industrial News
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
-<ul id="p1">
-<li><a href="">1这是测试新闻滚动效果</a></li>
-<li><a href="">2这是测试新闻滚动效果</a></li>
-<li><a href="">3这是测试新闻滚动效果</a></li>
-<li><a href="">4这是测试新闻滚动效果</a></li>
-<li><a href="">5这是测试新闻滚动效果</a></li>
-<li><a href="">6这是测试新闻滚动效果</a></li>
-<li><a href="">7这是测试新闻滚动效果</a></li>
-<li><a href="">8这是测试新闻滚动效果</a></li>
-</ul>
-<ul id="p2">
-</ul>
-</div>
-<script type="text/javascript">
-var n=document.getElementById("news");
-var p1=document.getElementById("p1");
-var p2=document.getElementById("p2");
-p2.innerHTML=p1.innerHTML;
-//alert(n.offsetHeight+" 1  "+p1.offsetHeight);
-var f=function(){
-    n.scrollTop++;
-    if(n.scrollTop>=p1.offsetHeight){
-        //alert(n.scrollTop+" 1  "+p1.offsetHeight);
-        n.scrollTop=0;
-    }
-}
-var i=setInterval(f,20);
-var tz=function(){
-    clearInterval(i);
-}
-var ks=function(){
-    i=setInterval(f,20);
-}
-</script>
-			 </td>
-			<td>
-				Research News
-				<div id="news1" onmouseover="tz()" onmouseout="ks()">
-<ul id="p1">
-<li><a href="">1这是测试新闻滚动效果</a></li>
-<li><a href="">2这是测试新闻滚动效果</a></li>
-<li><a href="">3这是测试新闻滚动效果</a></li>
-<li><a href="">4这是测试新闻滚动效果</a></li>
-<li><a href="">5这是测试新闻滚动效果</a></li>
-<li><a href="">6这是测试新闻滚动效果</a></li>
-<li><a href="">7这是测试新闻滚动效果</a></li>
-<li><a href="">8这是测试新闻滚动效果</a></li>
-</ul>
-<ul id="p2">
-</ul>
-</div>
-<script type="text/javascript">
-var n=document.getElementById("news1");
-var p1=document.getElementById("p1");
-var p2=document.getElementById("p2");
-p2.innerHTML=p1.innerHTML;
-//alert(n.offsetHeight+" 1  "+p1.offsetHeight);
-var f=function(){
-    n.scrollTop++;
-    if(n.scrollTop>=p1.offsetHeight){
-        //alert(n.scrollTop+" 1  "+p1.offsetHeight);
-        n.scrollTop=0;
-    }
-}
-var i=setInterval(f,20);
-var tz=function(){
-    clearInterval(i);
-}
-var ks=function(){
-    i=setInterval(f,20);
-}
-</script>
-			</td>
-		    </tr>	
+                                    <ul id="p1">
+                                        <li><a href="">1这是测试新闻滚动效果</a></li>
+                                        <li><a href="">2这是测试新闻滚动效果</a></li>
+                                        <li><a href="">3这是测试新闻滚动效果</a></li>
+                                        <li><a href="">4这是测试新闻滚动效果</a></li>
+                                        <li><a href="">5这是测试新闻滚动效果</a></li>
+                                        <li><a href="">6这是测试新闻滚动效果</a></li>
+                                        <li><a href="">7这是测试新闻滚动效果</a></li>
+                                        <li><a href="">8这是测试新闻滚动效果</a></li>
+                                  </ul>
+                                  <ul id="p2">
+                                  </ul>
+                              </div>
+                       <script type="text/javascript">
+                          var n=document.getElementById("news");
+                          var p1=document.getElementById("p1");
+                          var p2=document.getElementById("p2");
+                          p2.innerHTML=p1.innerHTML;
+                          //alert(n.offsetHeight+" 1  "+p1.offsetHeight);
+                         var f=function(){
+                        n.scrollTop++;
+                        if(n.scrollTop>=p1.offsetHeight){
+                        //alert(n.scrollTop+" 1  "+p1.offsetHeight);
+                       n.scrollTop=0;
+                     }
+                 }
+               var i=setInterval(f,20);
+               var tz=function(){
+              clearInterval(i);
+          }
+               var ks=function(){
+               i=setInterval(f,20);
+        }
+      </script>
+	 </td>
+	        <td>
+		      Research News
+		   <div id="news1" onmouseover="tz()" onmouseout="ks()">
+                        <ul id="p1">
+                            <li><a href="">1这是测试新闻滚动效果</a></li>
+                            <li><a href="">2这是测试新闻滚动效果</a></li>
+                            <li><a href="">3这是测试新闻滚动效果</a></li>
+                            <li><a hre="">4这是测试新闻滚动效果</a></li>
+                            <li><a href="">5这是测试新闻滚动效果</a></li>
+                            <li><a href="">6这是测试新闻滚动效果</a></li>
+                            <li>f<a href="">7这是测试新闻滚动效果</a></li>
+                            <li><a href="">8这是测试新闻滚动效果</a></li>
+                      </ul>
+               <ul id="p2">
+              </ul>
+         </div>
+                    <script type="text/javascript">
+                      var n=document.getElementById("news1");
+                      var p1=document.getElementById("p1");
+                      var p2=document.getElementById("p2");
+                      p2.innerHTML=p1.innerHTML;
+                      //alert(n.offsetHeight+" 1  "+p1.offsetHeight);
+                      var f=function(){
+                      n.scrollTop++;
+                      if(n.scrollTop>=p1.offsetHeight){
+                      //alert(n.scrollTop+" 1  "+p1.offsetHeight);
+                      n.scrollTop=0;
+                  }
+              }
+                     var i=setInterval(f,20);
+                     var tz=function(){
+                     clearInterval(i);
+               }
+                    var ks=function(){
+                    i=setInterval(f,20);
+           }
+          </script>
+	</td>
+</tr>	
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
 		    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
