--- a/News.html
+++ b/News.html
@@ -119,7 +119,7 @@
 			<td>
 				Industrial News
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
-                                    <ul id="p1">
+                                    <ul id="p11">
                                         <li><a href="">1这是测试新闻滚动效果</a></li>
                                         <li><a href="">2这是测试新闻滚动效果</a></li>
                                         <li><a href="">3这是测试新闻滚动效果</a></li>
@@ -129,14 +129,14 @@
                                         <li><a href="">7这是测试新闻滚动效果</a></li>
                                         <li><a href="">8这是测试新闻滚动效果</a></li>
                                   </ul>
-                                  <ul id="p2">
+                                  <ul id="p22">
                                   </ul>
                               </div>
                        <script type="text/javascript">
                           var n=document.getElementById("news");
-                          var p1=document.getElementById("p1");
-                          var p2=document.getElementById("p2");
-                          p2.innerHTML=p1.innerHTML;
+                          var p11=document.getElementById("p11");
+                          var p22=document.getElementById("p22");
+                          p22.innerHTML=p11.innerHTML;
                           //alert(n.offsetHeight+" 1  "+p1.offsetHeight);
                          var f=function(){
                         n.scrollTop++;
@@ -164,7 +164,7 @@
                             <li><a hre="">4这是测试新闻滚动效果</a></li>
                             <li><a href="">5这是测试新闻滚动效果</a></li>
                             <li><a href="">6这是测试新闻滚动效果</a></li>
-                            <li>f<a href="">7这是测试新闻滚动效果</a></li>
+                            <li><a href="">7这是测试新闻滚动效果</a></li>
                             <li><a href="">8这是测试新闻滚动效果</a></li>
                       </ul>
                <ul id="p2">
