--- a/News.html
+++ b/News.html
@@ -59,7 +59,7 @@
 </head>
     
      
-<body background="image/图片1.png">
+<body background="image/News.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
