--- a/News.html
+++ b/News.html
@@ -39,7 +39,7 @@
               margin:20px auto;
               background-color:#CCC;
               border:#039 solid 1px;
-              overflow:hidden;/*这里必须设置哦，否则滚动会消失的，如果设置为scroll，更容易明白原理*/
+              overflow:auto;
          }
        #news li{
               line-height:30px;
@@ -50,7 +50,7 @@
               margin:20px auto;
               background-color:#CCC;
               border:#039 solid 1px;
-              overflow:hidden;/*这里必须设置哦，否则滚动会消失的，如果设置为scroll，更容易明白原理*/
+              overflow:auto;
          }
        #news1 li{
               line-height:30px;
