--- a/News.html
+++ b/News.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
         #news{
-              width:300px;
+              width:500px;
               height:200px;
               margin:20px auto;
               background-color:#CCC;
@@ -45,7 +45,7 @@
               line-height:30px;
         }
 	#news1{
-              width:300px;
+              width:500px;
               height:200px;
               margin:20px auto;
               background-color:#CCC;
@@ -115,31 +115,29 @@
 				Industrial News
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                     <ul id="p1">
-                                        <li><a href="">1这是测试新闻滚动效果</a></li>
-                                        <li><a href="">2这是测试新闻滚动效果</a></li>
-                                        <li><a href="">3这是测试新闻滚动效果</a></li>
-                                        <li><a href="">4这是测试新闻滚动效果</a></li>
-                                        <li><a href="">5这是测试新闻滚动效果</a></li>
-                                        <li><a href="">6这是测试新闻滚动效果</a></li>
-                                        <li><a href="">7这是测试新闻滚动效果</a></li>
-                                        <li><a href="">8这是测试新闻滚动效果</a></li>
-                                  </ul>
-                                  <ul id="p2">
-                                  </ul>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
+                                        <li><a href="" style="width: 50px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+                                  </ul>                                  
                               </div>                  
 	 </td>
 	        <td>
 		      Research News
 		   <div id="news1" onmouseover="tz()" onmouseout="ks()">
                         <ul id="p11">
-                            <li><a href="">1这是测试新闻滚动效果</a></li>
-                            <li><a href="">2这是测试新闻滚动效果</a></li>
-                            <li><a href="">3这是测试新闻滚动效果</a></li>
-                            <li><a hre="">4这是测试新闻滚动效果</a></li>
-                            <li><a href="">5这是测试新闻滚动效果</a></li>
-                            <li><a href="">6这是测试新闻滚动效果</a></li>
-                            <li><a href="">7这是测试新闻滚动效果</a></li>
-                            <li><a href="">8这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
+                            <li><a hre="" style="width: 50px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
+                            <li><a href="" style="width: 50px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
                       </ul>
                <ul id="p22">
               </ul>
