--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
+		 *{
+    padding:0;
+    margin:0;
+    border:none;
+}
 	.navbar-collapse li ul{
 			display:none;
 			height:auto;
