--- a/courses.html
+++ b/courses.html
@@ -177,9 +177,9 @@
                     <div class="footer3 removeborder">
 			    <p><a href="contact.html">Contact us</a></p>
                     </div>
-                    <p style="text-align:center"><img  src="image/FTG logo.jpg" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/图层%201(1).png" style="width:40%; height:20%;margin: 10px;"></a> <br/>
+                    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/图层%201(1).png" style="width:40%; height:20%;margin: 10px;"></a> <br/>
                     <div class="footer4 removeborder">
-			 <p style="text-align:center"><strong>2016 DFSC Center</strong></a> <br/>   
+			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>   
                     </div>                   
         </div>
 <script type="text/javascript">
