--- a/Conference.html
+++ b/Conference.html
@@ -128,7 +128,7 @@
 				</ul>
 			</li>
                                  <li class="submenu">
-                                    <a href="courses.html">Courses</a>
+                                    <a href="courses.html">Training Camp</a>
                                 </li>
                                 <li class="submenu">
                                     <a href="project.html">Projects</a>
