--- a/News.html
+++ b/News.html
@@ -32,10 +32,7 @@
 		}
 	.navbar-collapse li:hover ul{
 			display:block;
-		}
-	.footer 1{
-		
-		}
+		}	
         *{
     padding:0;
     margin:0;
@@ -63,6 +60,12 @@
 #news1 li{
     line-height:30px;
 }
+	.footer{
+		margin-top: 15px;	
+		}
+	.removeborder{ 
+		border: none
+		}
 	</style>
 </head>
     
@@ -194,6 +197,10 @@ var ks=function(){
 </script>
 	 </td>
 </tr>	
+	     <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+			<div class="footer removeborder">
+			 <p style="text-align:center"><strong></strong>©2016 DFSC Cente</a> <br/>			
+		</div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
 		    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
