--- a/Conference.html
+++ b/Conference.html
@@ -88,6 +88,9 @@
 	.footer3{
 		margin-top: 10px;
 		}	
+	.footer4{
+		margin-top: 10px;
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -170,8 +173,10 @@
 			    <p style="text-align: center;font-size: 20px">Conference sponsorship and cooperation</p>
 			    <p style="text-indent:2em ">Universities, research institutes and enterprises in related fields can contact us to sponsor the conferences, which will provide you with a platform to showcase your research work and products. For more information, <a href="contact.html">contact</a> us.<br/>                            	                   
 		    		    </div>	
+		    <div class="footer3 removeborder">
 		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
-		          <div class="footer3 removeborder">
+		       </div>   
+		    <div class="footer4 removeborder">
 			<p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>	  
 		    </div>
 		    </div>
