--- a/News.html
+++ b/News.html
@@ -60,8 +60,11 @@
 #news1 li{
     line-height:30px;
 }
-	.footer{
-		margin-top: 15px;	
+	.footer1{
+		margin-top: 10px;	
+		}
+	.footer2{
+		margin-top: 10px;	
 		}
 	.removeborder{ 
 		border: none
@@ -197,9 +200,11 @@ var ks=function(){
 </script>
 	 </td>
 </tr>	
-	     <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
-			<div class="footer removeborder">
-			 <p style="text-align:center"><strong></strong>©2016 DFSC Cente</a> <br/>			
+	     <div class="footer2 removeborder">
+			<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+		</div>
+			<div class="footer2 removeborder">
+			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>			
 		</div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
