--- a/product.html
+++ b/product.html
@@ -69,6 +69,12 @@
 		 text-align: justify;
 /* 		 border-color: skyblue; */
 	}
+	.footer1{
+		margin-top: 10px;	
+		}
+	 .footer2{
+		margin-top: 10px;	
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -179,7 +185,13 @@ date.setTime(date.getTime() - skew)
 <!-- 	            <hr size='1'> -->
 		<div class="footer removeborder">
                 <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
-		</div> 		
+		</div>
+		<div class="footer1 removeborder">
+                <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+		</div>
+		<div class="footer2 removeborder">
+                <p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>
+		</div>
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
