--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -68,7 +68,7 @@
 				</ul>
 			</li>
                                  <li class="submenu">
-                                    <a href="courses.html">Courses</a>
+                                    <a href="courses.html">Training Camp</a>
                                 </li>
 				    <li class="submenu">
                                     <a href="project.html">Projects</a>
