--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -66,7 +66,7 @@
 				</ul>
 			</li>
                         <li class="submenu">
-                            <a href="courses.html">Courses</a>
+                            <a href="courses.html">Training Camp</a>
                         </li>
                         <li class="submenu">
                             <a href="project.html">Projects</a>
