--- a/courses.html
+++ b/courses.html
@@ -152,7 +152,7 @@
 		    </div>
 <!-- 			<hr> -->
 		    <div class="section2 removeborder">
-                    <p style="text-align: center;font-size: 20px">The spring Training Camp</p>
+                    <p style="text-align: center;font-size: 20px">The Spring Training Camp</p>
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC</a><br/>
