--- a/contact.html
+++ b/contact.html
@@ -196,8 +196,10 @@
 			</div>
 		    </div>
 		</form> 
-                    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="" style="width:40%; height:20%;margin: 10px;"></a> <br/>
-                    <div class="footer4 removeborder">
+                    <div class="footer1 removeborder">
+		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="" style="width:40%; height:20%;margin: 10px;"></a> <br/>
+                    </div>
+		    <div class="footer2 removeborder">
 			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>   
                     </div>                   
         </div>
