--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 </head>
     
      
-<body background="image/图片2.png">
+<body>
     <div >
         <div id="head">
             <header style="min-height: 76px;">
