--- a/contact.html
+++ b/contact.html
@@ -196,6 +196,7 @@
 			</div>
 		    </div>
 		</form> 
+		    </table>
                     <div class="footer1 removeborder">
 		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="" style="width:40%; height:20%;margin: 10px;"></a> <br/>
                     </div>
