--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
 		</form> 
 		    </table>
                     <div class="footer1 removeborder">
-		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="" style="width:40%; height:20%;margin: 10px;"></a> <br/>
+		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:100px;></a> <br/>
                     </div>
 		    <div class="footer2 removeborder">
 			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>   
