--- a/News.html
+++ b/News.html
@@ -33,42 +33,42 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}	
-        *{
-    padding:0;
-    margin:0;
-    border:none;
-}
-#news{
-    width:500px;
-    height:200px;
-    margin:20px auto;
-    background-color:#CCC;
-    border:#039 solid 1px;
-    overflow:hidden;/*这里必须设置哦，否则滚动会消失的，如果设置为scroll，更容易明白原理*/
-}
-#news li{
-    line-height:30px;
-}
-#news1{
-    width:500px;
-    height:200px;
-    margin:20px auto;
-    background-color:#CCC;
-    border:#039 solid 1px;
-    overflow:hidden;/*这里必须设置哦，否则滚动会消失的，如果设置为scroll，更容易明白原理*/
-}
-#news1 li{
-    line-height:30px;
-}
-	.footer1{
-		margin-top: 10px;	
-		}
-	.footer2{
-		margin-top: 10px;	
-		}
-	.removeborder{ 
-		border: none
-		}
+         *{
+                   padding:0;
+                   margin:0;
+                   border:none;
+          }
+         #news{
+                   width:500px;
+                   height:200px;
+                   margin:20px auto;
+                   background-color:#CCC;
+                   border:#039 solid 1px;
+                   overflow:hidden;
+              }
+          #news li{
+                       line-height:30px;
+                  }
+          #news1{
+                       width:500px;
+                       height:200px;
+                       margin:20px auto;
+                       background-color:#CCC;
+                       border:#039 solid 1px;
+                       overflow:hidden;
+                }
+         #news1 li{
+                       line-height:30px;
+                  }
+        .footer1{
+		      margin-top: 10px;	
+	        }
+        .footer2{
+		      margin-top: 10px;	
+	        }
+        .removeborder{ 
+		         border: none;
+		     }
 	</style>
 </head>
     
@@ -126,39 +126,39 @@
                     <p style="text-align: center;font-size: 20px">News</p>
                      <tr>
 			<td>
-				Industrial News
+			     Industrial News
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
-<ul id="p1">
-<li><a href="" style="width: 50px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
-</ul>
-<ul id="p2">
-</ul>
-</div>                 
-	 </td>
-	 <td>
-	 				Research News
-	 				<div id="news1" onmouseover="tz()" onmouseout="ks()">
-<ul id="p11">
-<li><a href="" style="width: 50px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
-<li><a href="" style="width: 50px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
-</ul>
-<ul id="p22">
-</ul>
-</div>
-	<script type="text/javascript">
+                                     <ul id="p1">
+                                         <li><a href="" style="width: 50px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+                                    </ul>
+                                    <ul id="p2">
+                                    </ul>
+                               </div>                 
+	                </td>
+	                <td>
+	 		     Research News
+	 		         <div id="news1" onmouseover="tz()" onmouseout="ks()">
+                                      <ul id="p11">
+                                          <li><a href="" style="width: 50px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+                                      </ul>
+                                      <ul id="p22">
+                                      </ul>
+                                </div>
+<script type="text/javascript">
 var n=document.getElementById("news");
 var p1=document.getElementById("p1");
 var p2=document.getElementById("p2");
@@ -201,11 +201,11 @@ var ks=function(){
 	 </td>
 </tr>	
 	     <div class="footer2 removeborder">
-			<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:10%; height:10%;" height:80px;></a> <br/>
-		</div>
-			<div class="footer2 removeborder">
-			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>			
-		</div>
+		  <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:10%; height:10%;" height:80px;></a> <br/>
+	     </div>
+	     <div class="footer2 removeborder">
+		  <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>			
+	     </div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
 		    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
