--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 		.navbar-collapse li:hover ul{
 			display:block;
 			display: -ms-flexbox;
-		}	 
+		}
+	.section1{
+		text-align:center;
+		margin-top: 15px;
+		}
 	 .section {
 		 background-color:skyblue;
 	         color:black;
@@ -143,8 +147,10 @@
                             <div id="theme">				    
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
+				<div class="section1">
                                 <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>            
-            			<div class="section removeborder">
+				    </div>
+					<div class="section removeborder">
                                 <p style="text-indent:2em ">Digital Future Research Center (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. <br/>
             			</div>        
                                 <div class="footer removeborder">
