--- a/News.html
+++ b/News.html
@@ -190,12 +190,12 @@ var f=function(){
         n1.scrollTop=0;
     }
 }
-var i=setInterval(f,20);
+var i1=setInterval(f,20);
 var tz=function(){
-    clearInterval(i);
+    clearInterval(i1);
 }
 var ks=function(){
-    i=setInterval(f,20);
+    i1=setInterval(f,20);
 }
 </script>
 	 </td>
